# haskellgame

./: .gitignore  cabal.project  flake.nix  release.nix
haskellgame/: CHANGELOG.md  haskellgame.cabal
haskellgame/app/: EventSource.hs  GameLoop.hs  Main.hs
haskellgame/app/Graphics/: Textures.hs
haskellgame/src/Game/: Character.hs  ControlKeys.hs  Direction.hs  Monster.hs  Player.hs
nix/: sources.json
